--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="u-clearfix u-shading u-video u-video-cover u-section-1" id="sec-2336">
       <div class="u-background-video u-expanded u-video-contain" style="">
         <div class="embed-responsive embed-responsive-1">
- <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/sVkRggDuNsU" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
+ <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/sVkRggDuNsU?playlist=j5molnjwlMs&amp;loop=1&amp;mute=1&amp;showinfo=0&amp;controls=0&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
         </div>
         <div class="u-video-shading" style="background-image: linear-gradient(0deg, rgba(30,30,30,0.85), rgba(30,30,30,0.85));"></div>
       </div>
